syntax = "proto3";
package meshmanager;

option go_package = "./;meshmanager";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/struct.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info : {title : "Mesh Manager API Doc" version : "0.1.0"};
schemes : HTTP consumes : "application/json" produces : "application/json"
}
;

// WebAnnotations 权限信息
message WebAnnotations {
  google.protobuf.Struct perms = 1
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "perms",
        description : "权限信息"
      } ];
}

service MeshManager {
  // ===== 版本管理相关 =====
  // 获取当前开放的istio版本
  rpc ListIstioVersion(ListIstioVersionRequest)
      returns (ListIstioVersionResponse) {
    option (google.api.http) = {
      get : "/meshmanager/v1/mesh/istio/version"
    };
  }

  // ===== Istio 相关 =====
  // 安装istio
  rpc InstallIstio(IstioRequest) returns (InstallIstioResponse) {
    option (google.api.http) = {
      post : "/meshmanager/v1/mesh/istio/install"
      body : "*"
    };
  }

  // 获取istio列表
  rpc ListIstio(ListIstioRequest) returns (ListIstioResponse) {
    option (google.api.http) = {
      get : "/meshmanager/v1/mesh/istio/list"
    };
  }

  // 更新istio配置
  rpc UpdateIstio(IstioRequest) returns (UpdateIstioResponse) {
    option (google.api.http) = {
      put : "/meshmanager/v1/mesh/istio/{meshID}"
      body : "*"
    };
  }

  // 删除istio
  rpc DeleteIstio(DeleteIstioRequest) returns (DeleteIstioResponse) {
    option (google.api.http) = {
      delete : "/meshmanager/v1/mesh/istio/{meshID}"
    };
  }

  // 获取istio详情
  rpc GetIstioDetail(GetIstioDetailRequest) returns (GetIstioDetailResponse) {
    option (google.api.http) = {
      get : "/meshmanager/v1/mesh/istio/detail/{meshID}"
    };
  }
}

// ===== 版本管理相关消息 =====
// 获取当前开放的istio版本请求
message ListIstioVersionRequest {}

// 获取当前开放的istio版本响应
message ListIstioVersionResponse {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {
      title : "ListIstioVersionResponse"
      description : "获取istio版本列表响应"
      required : [ "code", "message", "requestID", "web_annotations", "data" ]
    }
  };

  uint32 code = 1 [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) =
                        {title : "code", description : "返回错误码"} ];
  string message = 2
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "message",
        description : "返回错误信息"
      } ];
  string requestID = 3
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "request id",
        description : "请求 ID"
      } ];
  WebAnnotations web_annotations = 4
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "web_annotations",
        description : "权限信息"
      } ];
  IstioVersionAndFeatures data = 5 [
    json_name = "data",
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title : "data"
      description : "响应数据"
    }
  ];
}

// 获取istio版本列表响应
message IstioVersionAndFeatures {
  repeated IstioVersion istioVersions = 1
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "istioVersions"
        description : "istio版本列表"
      } ];
  map<string, FeatureConfig> featureConfigs = 2
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "featureConfigs"
        description : "功能列表(注意版本)"
      } ];
}

// istio版本信息
message IstioVersion {
  string name = 1;         // 版本名称
  string version = 2;      // 版本号
  string chartVersion = 3; // chart 版本
  string kubeVersion = 4;  // 支持的 kube 版本
}

// 功能特性配置
message FeatureConfig {
  string name = 1;                     // 特性名称
  string description = 2;              // 特性描述
  string value = 3;                    // 特性值
  string defaultValue = 4;             // 默认值
  repeated string availableValues = 5; // 可选值
  repeated string supportVersions = 6; // 支持的版本
}

// ===== Mesh 管理相关消息 =====
// istio配置信息
message IstioRequest {
  google.protobuf.StringValue meshID = 1;
  google.protobuf.StringValue projectID = 2;                // 项目ID
  google.protobuf.StringValue projectCode = 3;              // 项目编码
  google.protobuf.StringValue name = 4;                     // 网格名称
  google.protobuf.StringValue version = 5;                  // 使用的版本
  google.protobuf.StringValue controlPlaneMode = 6;         // 安装模式
  google.protobuf.StringValue clusterMode = 7;              // 多集群集群模式
  google.protobuf.StringValue description = 8;              // 描述
  repeated string primaryClusters = 9; // 主集群列表
  repeated string remoteClusters = 10;  // 远程集群列表
  google.protobuf.BoolValue differentNetwork = 11; // 网络是否一致：关乎是否默认安装egress gateway
  ResourceConfig sidecarResourceConfig = 12; // sidecar资源配置
  HighAvailability highAvailability = 13;    // 高可用配置
  // 可观测性配置
  ObservabilityConfig observabilityConfig = 14;
  map<string, FeatureConfig> featureConfigs = 15; // 功能特性[跟随版本关联的特性]
}

// 可观测性配置
message ObservabilityConfig {
  MetricsConfig metricsConfig = 1;           // 指标采集配置
  LogCollectorConfig logCollectorConfig = 2; // 日志采集配置
  TracingConfig tracingConfig = 3;           // 全量路追踪配置
}

// 高可用配置，hpa，副本数设置等
message HighAvailability {
  google.protobuf.BoolValue autoscaleEnabled = 1;                    // 是否开启hpa
  google.protobuf.Int32Value autoscaleMin = 2;                       // hpa最小副本数
  google.protobuf.Int32Value autoscaleMax = 3;                       // hpa最大副本数
  google.protobuf.Int32Value replicaCount = 4;                       // 副本数
  google.protobuf.Int32Value targetCPUAverageUtilizationPercent = 5; // 目标cpu平均使用率 0-100
  ResourceConfig resourceConfig = 6;            // resource配置
  DedicatedNode dedicatedNode = 7; // 专属节点（专用节点标签），默认会加上容忍
}

// 专属调度标签
message DedicatedNode {
  google.protobuf.BoolValue enabled = 1; // 是否启用
  map<string, string> nodeLabels = 2;    // 节点标签
}

// resource配置
message ResourceConfig {
  google.protobuf.StringValue cpuRequest = 1;    // CPU请求
  google.protobuf.StringValue cpuLimit = 2;      // CPU限制
  google.protobuf.StringValue memoryRequest = 3; // 内存请求
  google.protobuf.StringValue memoryLimit = 4;   // 内存限制
}

// 日志采集配置
message LogCollectorConfig {
  google.protobuf.BoolValue enabled = 1;             // 是否启用
  google.protobuf.StringValue accessLogEncoding = 2; // 日志编码 [text, json]
  google.protobuf.StringValue accessLogFormat = 3;   // 日志格式
}

// tracing配置
message TracingConfig {
  google.protobuf.BoolValue enabled = 1;               // 是否启用
  google.protobuf.Int32Value traceSamplingPercent = 2; // 采样率,百分比
  google.protobuf.StringValue endpoint = 3;            // 上报地址
  google.protobuf.StringValue bkToken = 4;             // 蓝鲸token
}

// 指标采集配置
message MetricsConfig {
  // 控制面指标
  google.protobuf.BoolValue controlPlaneMetricsEnabled = 1;
  // 数据面指标
  google.protobuf.BoolValue dataPlaneMetricsEnabled = 2;
}

// 安装istio响应
message InstallIstioResponse {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {
      title : "InstallIstioResponse"
      description : "安装istio响应"
      required : [ "code", "message", "requestID", "web_annotations", "data" ]
    }
  };

  uint32 code = 1 [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) =
                        {title : "code", description : "返回错误码"} ];
  string message = 2
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "message",
        description : "返回错误信息"
      } ];
  string requestID = 3
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "request id",
        description : "请求 ID"
      } ];
  WebAnnotations web_annotations = 4
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "web_annotations",
        description : "权限信息"
      } ];
  string meshID = 5
      [ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title : "meshID",
        description : "meshID"
      } ];
}

// 获取istio列表请求
message ListIstioRequest {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {title : "ListIstioRequest" description : "获取istio列表请求"}
  };

  string projectCode = 1 [ (validate.rules).string = {min_len : 1 , max_len : 32} ];
  string meshID = 2;
  string name = 3;
  string status = 4;
  int32 page = 5 [ (validate.rules).int32 = {gt : 0, lte : 10000} ];
  int32 pageSize = 6 [ (validate.rules).int32 = {gt : 0, lte : 100} ];
}

// 获取istio列表响应
message ListIstioResponse {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {
      title : "ListIstioResponse"
      description : "获取istio网格列表响应"
      required : [ "code", "message", "requestID", "web_annotations", "data" ]
    }
  };

  uint32 code = 1;
  string message = 2;
  string requestID = 3;
  WebAnnotations web_annotations = 4;
  ListIstioData data = 5;
}

// istio列表响应
message ListIstioData {
  int32 total = 1;
  repeated IstioListItem items = 2;
}

// istio列表项
message IstioListItem {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {title : "IstioListItem" description : "istio列表项"}
  };

  string meshID = 1;        // meshID
  string status = 2;        // 状态
  string statusMessage = 3; // 状态消息
  string networkID = 4;     // 网络ID
  string chartVersion = 5;  // chart版本
  int64 createTime = 6;     // 创建时间
  int64 updateTime = 7;     // 更新时间
  string createBy = 8;      // 创建者
  string updateBy = 9;      // 更新者

  /* 保持跟 IstioRequest 一致 */
  string projectID = 10;                // 项目ID
  string projectCode = 11;              // 项目编码
  string name = 12;                     // 名称
  string description = 13;              // 描述
  string version = 14;                  // 使用的版本
  string controlPlaneMode = 15;         // 安装模式
  string clusterMode = 16;              // 多集群集群模式
  repeated string primaryClusters = 17; // 主集群列表
  repeated string remoteClusters = 18;  // 远程集群列表
  bool differentNetwork = 19; // 网络是否一致：关乎是否默认安装egress gateway
  ResourceConfig sidecarResourceConfig = 20; // sidecar资源配置
  HighAvailability highAvailability = 21;    // 高可用配置
  // 可观测性配置
  ObservabilityConfig observabilityConfig = 22;
  map<string, FeatureConfig> featureConfigs = 23; // 功能特性[跟随版本关联的特性]
}

// 更新istio响应
message UpdateIstioResponse {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {
      title : "UpdateIstioResponse"
      description : "更新网格响应"
      required : [ "code", "message", "requestID", "web_annotations" ]
    }
  };

  uint32 code = 1;
  string message = 2;
  string requestID = 3;
  WebAnnotations web_annotations = 4;
}

// 删除istio请求
message DeleteIstioRequest {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {title : "DeleteIstioRequest" description : "删除istio请求"}
  };

  string meshID = 1 [ (validate.rules).string = {min_len : 1} ];
  string projectCode = 2 [ (validate.rules).string = {min_len : 1, max_len : 32} ];
}

// 删除istio响应
message DeleteIstioResponse {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {
      title : "DeleteIstioResponse"
      description : "删除网格响应"
      required : [ "code", "message", "requestID", "web_annotations" ]
    }
  };

  uint32 code = 1;
  string message = 2;
  string requestID = 3;
  WebAnnotations web_annotations = 4;
}

// 获取istio详情请求
message GetIstioDetailRequest {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {title : "GetIstioDetailRequest" description : "获取istio详情请求"}
  };

  string projectCode = 1[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
        title: "projectCode",
        description: "项目编码"
    }, (validate.rules).string = {min_len : 1 , max_len : 32}];
  string meshID = 2 [ (validate.rules).string = {min_len : 1} ];
}

// 获取istio详情响应
message GetIstioDetailResponse {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {
      title : "GetIstioDetailResponse"
      description : "获取istio详情响应"
      required : [ "code", "message", "requestID", "web_annotations", "data" ]
    }
  };

  uint32 code = 1;
  string message = 2;
  string requestID = 3;
  WebAnnotations web_annotations = 4;
  IstioListItem data = 5;
}